Refactor order and payment flow: unified paymentstatus and auto create payment on order creation